syntax = "proto3";

package com.coralogix.integrations.v1;

import "com/coralogix/integrations/v1/audit_log.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

message ResourceId{
    google.protobuf.UInt32Value id = 1;
}

message ActionId {
    google.protobuf.UInt32Value id = 1;
}

message ApiKeyValue {
    google.protobuf.StringValue key = 1;
}

message ApiKeyId {
    google.protobuf.StringValue id = 1; 
}

message Permission {
    ResourceId resource = 1;
    ActionId action = 2;
}

service PermissionCheckService {

    rpc CheckApiKeyPermission(CheckApiKeyPermissionRequest) returns (CheckApiKeyPermissionResponse) {
        option (audit_log_description).description = "CheckPermission for api-key";
        option (google.api.http) = {
          post: "/integrations/v1/check-permission"
          body: "*"
        };
      }

}

message CheckApiKeyPermissionRequest{
    Permission permission = 1;
    ApiKeyValue api_key = 2;
}

message CheckApiKeyPermissionResponse {

    message KeyAuthorizationResult {
        ApiKeyId api_key_id = 1;
    }

    message Unauthorized {}

    oneof result {
        Unauthorized unauthorized = 1;
        KeyAuthorizationResult authorization_result = 2;
    }
}
